test/should-fail/vsgc3975/vsgc3975b.f3
/**
 * @subtest
 */

package vsgc3975;

public abstract class vsgc3975b {

    protected var parent:vsgc3975b = null;

}
